--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -4,7 +4,7 @@
     --color-secondary: rgb(155, 83, 35);
 }
 
-.noselect {
+* {
     -webkit-touch-callout: none; /* iOS Safari */
       -webkit-user-select: none; /* Safari */
        -khtml-user-select: none; /* Konqueror HTML */
